--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "firebase-admin": "~5.8.1",
     "firebase-functions": "^0.8.1",
-    "paystack": "^2.0.1"
+    "paystack": "^2.0.1",
+    "request": "^2.85.0"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
