Finished profile photo upload and changed styling on Profile Component on readOnly

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 # firebase functions dependencies
 /functions/node_modules
 
+# firebase keys
+/functions/service-account.json
+
 # configurations
 /src/config
 
