--- a/functions/package.json
+++ b/functions/package.json
@@ -12,13 +12,13 @@
   "dependencies": {
     "@google-cloud/storage": "^1.6.0",
     "child-process-promise": "^2.2.1",
-    "firebase-admin": "~5.8.1",
-    "firebase-functions": "^0.8.1",
+    "firebase-admin": "^5.12.0",
+    "firebase-functions": "^1.0.1",
     "paystack": "^2.0.1",
     "request": "^2.85.0"
   },
   "devDependencies": {
-    "eslint": "^4.12.0",
+    "eslint": "^4.19.1",
     "eslint-plugin-promise": "^3.6.0"
   },
   "private": true
