--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.11.0",
+    "firebase-admin": "^5.12.0",
+    "firebase-functions": "^1.0.1",
     "moment": "^2.21.0",
     "pikaday": "^1.7.0",
     "react": "^16.2.0",
