--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-firebaseui": "^3.0.4",
-    "react-paystack": "^1.0.1",
+    "react-paystack": "^2.0.0",
     "react-redux": "^5.0.7",
+    "react-responsive-modal": "^3.5.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^4.0.0",
