--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
     "child-process-promise": "^2.2.1",
     "firebase-admin": "^5.12.0",
     "firebase-functions": "^2.1.0",
+    "opentok": "^2.8.0",
     "paystack": "^2.0.1",
     "request": "^2.85.0"
   },
