--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@opentok/client": "^2.15.8",
     "firebase": "^5.0.1",
     "moment": "^2.21.0",
+    "opentok-react": "^0.9.0",
     "pikaday": "^1.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
