Users can change the media type of their consultation

--- a/server/.env.example
+++ b/server/.env.example
@@ -36,5 +36,8 @@ PUSHER_APP_CLUSTER=mt1
 
 
 CONSULTATION_FEE=
+CONSULTATION_DURATION_MINUTES=15
 DOCTOR_CONSULTATION_CUT=
 TAPAMEDIC_CONSULTATION_CUT=
+OPENTOK_API_KEY=
+OPENTOK_API_SECRET=
